[2020-03-24]
- Added Akkorokamui instance's equipment
- Removed MDEF penetration from Nightmare Verit card

[2020-02-29]
- Fixed flat MATK bonus for MATK computation
- Fixed magical elemental damage computation

[2020-01-05]
- Updated BG items

[2019-12-22]
- Brasilis and Moscovia cards

[2019-12-07]
- Fixed CRIT formula
- Fixed misc bugs

[2019-10-30]
- Added Old Glast Heim items

[2019-10-27]
- Fixed Damage calculation with Wakwak card
- Fixed Attack Modifier update with Bakonawa card
- Updated Elemental armors wearable by Novice/Super Novice
- Fixed Vanilla restrictions for Malaya MVP cards
- Added Flat MATK bonus for the card having this effect

[2019-10-12]
- Added - Ribbon Magician Hat


[2019-10-06]
- Added - Maylaya Cards [Hatfun] & [ZoneSoldier]
- Fixed - Imperial Spear add's 2 + atk per level of spear mastery now.[ZoneSoldier]
- Added - Increases magical damage against bosstype monsters [Hatfun]

[2018-08-11]
- Fixed Poison Knife itemid [Loa]
- Fixed FLEE reduction when mobbed [Loa]
- Fixed soft DEF reduction when mobbed [Loa]
		Combat calculations only, not display

[2018-08-09]
- Fixed Bow of Evil jobid [Loa]

[2018-08-08]
- Removed Piwik [Amor]

[2018-08-06]
- BG Item Proofreads [Loa]
		Medal of Honor (Thief)
		Brave Gladiator Blade
		Brave Battle Fist
		Brave Battle Strategy Book
		Assaulter Lance
		Speedy Recovery Wand
		Valorous Assassin Damascus
		Valorous Battle Fist
		Valorous Gladiator Blade
		Various set effects
		All Medal of Honor items
		Glorious Claymore
		Glorious Gladius

[2018-08-05]
- Added Angra Mantis Card [Loa]
- Fixed Drake Card skill [NattWara]

[2018-08-02]
- Fixed Sniper Cecil stats [NattWara]
- Fixed Monster FLEE up formula [NattWara]

[Update 2018-07-27]
- BG Items [Amor]
		Elite Engineer Armor
		Assassin Robe
		Warlock's Battle Robe
		Medic's Robe
		Elite Archer Suit
		Elite Shooter Suit
		Medalion [Merchant]
		Medalion [Acolyte]
		Medalion [Swordsman]
		Sheriff Badge
		Medalion [Mage/SL]
		Medalion [Thief]
		Medalion [Archer]