@@ -1,3 +1,8 @@
+[2020-03-25]
+- Fixed Gold Scaraba card ATK bonus for damage computation
+- Fixed Imperial Spear ATK bonus for damage computation
+- Added Star Dust Hairband
+
 [2020-03-24]
 - Added Akkorokamui instance's equipment
 - Removed MDEF penetration from Nightmare Verit card
